--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.14.1"
+    "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.1",
+    "react-responsive": "^10.0.0",
+    "react-tooltip": "^5.28.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
